--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             Я всегда на связи для того, чтобы помочь каждому клиенту и воплотить все ваши желания в реальность	
                             &#128062;
                         </h2>
-                        <address>
+                        <div class="addressme">
                             <p>
                                 <img src="/img/vectormail.svg"/>
                                 <a href="mailto:stepanovadari@mail.ru">stepanovadari@mail.ru</a>
@@ -182,7 +182,7 @@
                                 <img src="/img/vectortelephone.svg"/>
                                 <a href="tel:+79228167431">+7 922 816 74 31</a>
                             </p> 
-                        </address>
+                        </div>
                     </div>
                 </div>
                 <div class="contact">
